k8s/overlays/prod/patches/replicas-chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: gamehouse
spec:
  replicas: 2
