k8s/overlays/prod/patches/replicas-crew.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crew
  namespace: gamehouse
spec:
  replicas: 3
