k8s/overlays/prod/patches/replicas-match.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match
  namespace: gamehouse
spec:
  replicas: 2
