k8s/overlays/prod/patches/replicas-post.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
  namespace: gamehouse
spec:
  replicas: 2
