k8s/overlays/prod/patches/replicas-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: gamehouse
spec:
  replicas: 2
